<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alis.lotcion.ui.fragments.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_lot"
        android:name="com.alis.lotcion.ui.fragments.addlot.AddLotFragment"
        android:label="@string/navigation_add_lot"
        tools:layout="@layout/fragment_add_lot" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.alis.lotcion.ui.fragments.profile.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>