<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.authentication.signin.SignInFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_sign_in_phone_number"
        style="@style/AuthenticationInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_sign_in_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="PhoneNumber"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_sign_in_password"
        style="@style/AuthenticationInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/button_sign_in"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_sign_in_don_t_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/button_don_t_have_account"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>